--- a/index.html
+++ b/index.html
@@ -198,21 +198,21 @@
   
       <div class="project school-holder js-scroll slide-left">
        <h2>Kibabii university</h2>
-       <img src="images/studentverdict.jpg" width="100%">
+      <!--  <img src="images/studentverdict.jpg" width="100%"> -->
        <p>
          Currently Degree in Information Technology 2018 - todate
        </p>
     </div>
      <div class="project school-holder js-scroll fade-in-bottom">
        <h2>Paul boit boys high</h2>
-       <img src="images/hotel.png" width="100%">
+     <!--   <img src="images/hotel.png" width="100%"> -->
        <p>
         Secondary school 2013 -2017
        </p>
     </div>
     <div class="project school-holder js-scroll slide-right">
       <h2>Moi Barracks primary</h2>
-       <img src="images/school.png" width="100%">
+      <!--  <img src="images/school.png" width="100%"> -->
        <p>
          Primary school 2002 - 2012
        </p>
