--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="image-container js-scroll slide-left">
     <h1>Daniel Kipchirchir</h1>
          <div>
-           <img src="images/profile.jpg" width="100%">
+           <img src="images/profilephoto.png" width="100%">
          </div>
   </div>
    <div class="journey-container js-scroll slide-right">
     <h1>Journey</h1>
     <p>
-      “I’ve been passionate about technology since I was able to type. Have away st my mind to new enovations and inventiosn of mankind on technolgy. I knew that I wanted to pursue technological oriented course to suit my passion, since I could not resist the inner me pushh towards tech. Am currently studing at KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY”
+      “I’ve been passionate about technology since I was able to type. Have always set my mind to new innovations and inventiosn of mankind on technolgy. I knew that pursuing technological oriented course was a must to suit my passion, since I could not resist the inner me pushing towards tech, I was able to join tech world and am currently studing at KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY”
     </p>
   </div>
   </div>
@@ -136,7 +136,7 @@
        <img src="images/excellenttracking.jpg" width="100%">
        <p>
          This website for an tracking company .
-         <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
+         <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
        </p>
     </div>
     <div class="project js-scroll slide-right">
@@ -144,7 +144,7 @@
        <img src="images/trainticket.jpg" width="100%">
        <p>
          This a online train ticketing app . this aims at making it easy to get your ticket online and also be able to track your favorite train
-         <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
+         <a href="https://github.com/danielkirwa/my-Train-Ticket-app" target="_blank">visit</a>
        </p>
     </div>
     </div>
@@ -200,24 +200,71 @@
        <h2>Kibabii university</h2>
       <!--  <img src="images/studentverdict.jpg" width="100%"> -->
        <p>
-         Currently Degree in Information Technology 2018 - todate
+         <b>Currently pursuing  INFORMATION TECHNOLOGY to end in 2022 December</b><br>
+         I am passionate about learning more and shappenng my skills in this tech word. My extensive study in this IT will be of great benefit in my career jounery. I am deeply interested in adding my high-level experience that will help make a difference in my life.
        </p>
     </div>
      <div class="project school-holder js-scroll fade-in-bottom">
        <h2>Paul boit boys high</h2>
      <!--   <img src="images/hotel.png" width="100%"> -->
        <p>
-        Secondary school 2013 -2017
+        <b>Secondary school level (Period 2013 -2017)</b><br>
+        Join Paul boit and managed to study the following subjects
+        (Maths,English,Kiswahili,Chemistry,Physics,Biology,Geography and Christian Religion Education)
        </p>
     </div>
     <div class="project school-holder js-scroll slide-right">
       <h2>Moi Barracks primary</h2>
       <!--  <img src="images/school.png" width="100%"> -->
        <p>
-         Primary school 2002 - 2012
+         <b>Primary school level (Period 2002 - 2012)</b>
+         Jion Moi barracks at my younger age ang managed to pursuie the following subjects
+         (Maths ,English,Kiswahili, Science, Social Studies & , Christian Religion Education)
        </p>
     </div>
     </div>
+
+    <!-- certification -->
+<center><label class="large">Certification</label></center>
+  <div class="projects-holder">
+  
+      <div class="project school-holder js-scroll slide-left">
+       <h2>Offered by Google</h2>
+      <!--  <img src="images/studentverdict.jpg" width="100%"> -->
+       <p>
+         <b>Introduction to Git and GitHub (Version Control System)</b><br>
+         I learn how to keep track of the different versions of my code and configuration files using the popular version control system (VCS) called Git. I was able to setup an account with a service called GitHub so that I can create my own remote repositories to store my code and configuration.<br>
+         <a href="https://coursera.org/share/74f5719ced1a022423ad28539d5c1f67">View certificate</a>
+       </p>
+    </div>
+     <div class="project school-holder js-scroll fade-in-bottom">
+       <h2>Indian School of Business (ISB)</h2>
+     <!--   <img src="images/hotel.png" width="100%"> -->
+       <p>
+        <b>IT Project Management</b><br>
+        Was abel to learn management tools, techniques and methodologies of addresses project management in the context of IT projects, including software projects. Using the framework of project life cycle, the course covers various aspects pertaining to 
+        (i) project initiation<br>
+        (ii) project planning and scheduling<br> 
+        (iii) project monitoring and control <br>
+        (iv) project termination<br>
+        <a href="https://coursera.org/share/2b06d4187e4806c92b9e51b1c5287e05">View certificate</a>
+       </p>
+    </div>
+    <div class="project school-holder js-scroll slide-right">
+      <h2>University of Colorado</h2>
+      <!--  <img src="images/school.png" width="100%"> -->
+       <p>
+         <b>Windows Server Management and Security</b>
+        Item covered <br>
+         (i) Windows Server installation <br>
+         (i) Configuring users<br>
+         (iii) Hardening the server operating system <br>
+         <a href="https://coursera.org/share/543382f307cbc14d7f97e5e7b1663bb4">View certificate</a>
+       </p>
+    </div>
+    </div>
+
+    <!-- end of certification -->
   </div>
 </section>
 <section class="scroll-container" id="more">
