--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <head>
   <title>Daniel Kipchirchir</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
+   <meta name="description" content="danielkirwa portfolio">
   <link rel="stylesheet" type="text/css" href="styles/background.css">
   <link rel="stylesheet" type="text/css" href="index.css">
   <link rel="stylesheet" type="text/css" href="skills.css">
@@ -55,13 +56,13 @@
         <div class="image-container js-scroll slide-left">
     <h1>Daniel Kipchirchir</h1>
          <div>
-           <img src="images/profilephoto.png" width="100%">
+           <img src="images/profilephoto.png" width="100%" alt="my profile image">
          </div>
   </div>
    <div class="journey-container js-scroll slide-right">
     <h1>Journey</h1>
     <p>
-      “I’ve been passionate about technology since I was able to type. Have always set my mind to new innovations and inventiosn of mankind on technolgy. I knew that pursuing technological oriented course was a must to suit my passion, since I could not resist the inner me pushing towards tech, I was able to join tech world and am currently studing at KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY”
+      “I’ve been passionate about technology since I was able to type. Have always set my mind to new innovations and inventiosn of mankind on technology. I knew that pursuing technological oriented course was a must to suit my passion, since I could not resist the inner me pushing towards tech, I was able to join tech world and am currently studying at <strong>KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY”</strong>
     </p>
   </div>
   </div>
@@ -125,15 +126,15 @@
   
       <div class="project js-scroll slide-left">
        <h2>e-learning</h2>
-       <img src="images/elearning.jpg" width="100%">
+       <img src="images/elearning.jpg" width="100%" alt="project image">
        <p>
-         This a online learning that I developed during the pandemic period to unsure that learning goes on dispite the situation.
+         This a online learning that I developed during the pandemic period to unsure that learning goes on despite the situation.
          <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
        </p>
     </div>
      <div class="project js-scroll fade-in-bottom">
        <h2>Excellent tracking</h2>
-       <img src="images/excellenttracking.jpg" width="100%">
+       <img src="images/excellenttracking.jpg" width="100%" alt="project image">
        <p>
          This website for an tracking company .
          <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
@@ -141,7 +142,7 @@
     </div>
     <div class="project js-scroll slide-right">
       <h2>Train ticketing</h2>
-       <img src="images/trainticket.jpg" width="100%">
+       <img src="images/trainticket.jpg" width="100%" alt="project image">
        <p>
          This a online train ticketing app . this aims at making it easy to get your ticket online and also be able to track your favorite train
          <a href="https://github.com/danielkirwa/my-Train-Ticket-app" target="_blank">visit</a>
@@ -158,7 +159,7 @@
   
       <div class="project js-scroll slide-left">
        <h2>Student verdict</h2>
-       <img src="images/studentverdict.jpg" width="100%">
+       <img src="images/studentverdict.jpg" width="100%" alt="project image">
        <p>
          This is an automated conviction system that aid in passing judgement based on evidence provided.
          <a href="https://github.com/danielkirwa/Student-evidence-based-verdict" target="_blank">visit</a>
@@ -166,7 +167,7 @@
     </div>
      <div class="project js-scroll fade-in-bottom">
        <h2>Hotel manager</h2>
-       <img src="images/hotel.png" width="100%">
+       <img src="images/hotel.png" width="100%" alt="project image">
        <p>
          A hotel management system that is mainly design to smoothen the booking services eg rooms,wedding grounds 
          <a href="https://github.com/danielkirwa/HotelMagementDektopApp" target="_blank">visit</a>
@@ -174,7 +175,7 @@
     </div>
     <div class="project js-scroll slide-right">
       <h2>School management system</h2>
-       <img src="images/school.png" width="100%">
+       <img src="images/school.png" width="100%" alt="project image">
        <p>
          This desktop application is to aid in synchronizing the activities in one database.
          <a href="https://github.com/danielkirwa/S-M-S-pri" target="_blank">visit</a>
@@ -198,7 +199,7 @@
   
       <div class="project school-holder js-scroll slide-left">
        <h2>Kibabii university</h2>
-      <!--  <img src="images/studentverdict.jpg" width="100%"> -->
+
        <p>
          <b>Currently pursuing  INFORMATION TECHNOLOGY to end in 2022 December</b><br>
          I am passionate about learning more and shappenng my skills in this tech word. My extensive study in this IT will be of great benefit in my career jounery. I am deeply interested in adding my high-level experience that will help make a difference in my life.
@@ -206,7 +207,7 @@
     </div>
      <div class="project school-holder js-scroll fade-in-bottom">
        <h2>Paul boit boys high</h2>
-     <!--   <img src="images/hotel.png" width="100%"> -->
+
        <p>
         <b>Secondary school level (Period 2013 -2017)</b><br>
         Join Paul boit and managed to study the following subjects
@@ -215,7 +216,7 @@
     </div>
     <div class="project school-holder js-scroll slide-right">
       <h2>Moi Barracks primary</h2>
-      <!--  <img src="images/school.png" width="100%"> -->
+   
        <p>
          <b>Primary school level (Period 2002 - 2012)</b>
          Jion Moi barracks at my younger age ang managed to pursuie the following subjects
@@ -230,7 +231,7 @@
   
       <div class="project school-holder js-scroll slide-left">
        <h2>Offered by Google</h2>
-      <!--  <img src="images/studentverdict.jpg" width="100%"> -->
+     
        <p>
          <b>Introduction to Git and GitHub (Version Control System)</b><br>
          I learn how to keep track of the different versions of my code and configuration files using the popular version control system (VCS) called Git. I was able to setup an account with a service called GitHub so that I can create my own remote repositories to store my code and configuration.<br>
@@ -276,7 +277,7 @@
         <div class="image-container js-scroll slide-left">
     <h1>Industrial training</h1>
          <div>
-           <img src="images/profile.jpg" width="310px" class="image-change">
+           <img src="images/profile.jpg" width="310px" class="image-change" alt="event image">
          </div>
   </div>
    <div class="journey-container js-scroll slide-left">
@@ -290,7 +291,7 @@
         <div class="image-container js-scroll slide-right">
     <h1>IoT Demonstration</h1>
          <div class="images-shape">
-           <img src="images/iot.jpg" width="310px" class="image-change">
+           <img src="images/iot.jpg" width="310px" class="image-change" alt="event image">
          </div>
   </div>
    <div class="journey-container js-scroll slide-right">
