--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
        <p>
         <b>Secondary school level (Period 2013 -2017)</b><br>
         Join Paul boit and managed to study the following subjects
-        (Maths,English,Kiswahili,Chemistry,Physics,Biology,Geography and Christian Religion Education)
+        (Maths, English, Kiswahili, Chemistry, Physics, Biology, Geography and Christian Religion Education)
        </p>
     </div>
     <div class="project school-holder js-scroll slide-right">
@@ -220,7 +220,7 @@
        <p>
          <b>Primary school level (Period 2002 - 2012)</b>
          Jion Moi barracks at my younger age ang managed to pursuie the following subjects
-         (Maths ,English,Kiswahili, Science, Social Studies & , Christian Religion Education)
+         (Maths ,English,Kiswahili, Science, Social Studies & Christian Religion Education)
        </p>
     </div>
     </div>
@@ -243,7 +243,7 @@
      <!--   <img src="images/hotel.png" width="100%"> -->
        <p>
         <b>IT Project Management</b><br>
-        Was abel to learn management tools, techniques and methodologies of addresses project management in the context of IT projects, including software projects. Using the framework of project life cycle, the course covers various aspects pertaining to 
+        Was abel to learn management tools, techniques and methodologies of addresses project management in the context of IT projects, including software projects. Using the framework of project life cycle, the course covers various aspects pertaining to <br>
         (i) project initiation<br>
         (ii) project planning and scheduling<br> 
         (iii) project monitoring and control <br>
