--- a/index.html
+++ b/index.html
@@ -62,7 +62,12 @@
    <div class="journey-container js-scroll slide-right">
     <h1>Journey</h1>
     <p>
-      “I’ve been passionate about technology since I was able to type. Have always set my mind to new innovations and inventiosn of mankind on technology. I knew that pursuing technological oriented course was a must to suit my passion, since I could not resist the inner me pushing towards tech, I was able to join tech world and am currently studying at <strong>KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY”</strong>
+      “I’ve been passionate about technology since I was able to type. Have always 
+      set my mind to new innovations and inventiosn of mankind on technology. 
+      I knew that pursuing technological oriented course was a must to suit my passion, 
+      since I could not resist the inner me pushing towards tech, 
+      I was able to join tech world and am currently studying at 
+      <strong>KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY”</strong>
     </p>
   </div>
   </div>
@@ -82,8 +87,16 @@
      <div class="skills-holder">
         <div class="technology-container js-scroll slide-left">
     <h1>Technology trands</h1>
-    <div class="piechartml">ML 70%</div><br>
-    <div class="piechartiot">IoT 60%</div>
+     <table>
+      <tr>
+        <td> <br><div class="piechartgit">Git 70%</div><br></td>
+        <td><div class="piechartiot">ML 60%</div></td>
+      </tr>
+       <tr >
+        <td> <div class="piechartvue">IoT 60%</div></td>
+      </tr>
+    </table>
+   
   </div>
    <div class="framework-container js-scroll slide-right">
     <h1>Frameworks</h1>
@@ -210,7 +223,8 @@
 
        <p>
         <b>Secondary school level (Period 2013 -2017)</b><br>
-        Join Paul boit and managed to study the following subjects
+        Join Paul boit and managed to study the following subjects. This after my successfully completing my 
+        primary education. 
         (Maths, English, Kiswahili, Chemistry, Physics, Biology, Geography and Christian Religion Education)
        </p>
     </div>
@@ -219,7 +233,8 @@
    
        <p>
          <b>Primary school level (Period 2002 - 2012)</b>
-         Jion Moi barracks at my younger age ang managed to pursuie the following subjects
+         Jion Moi barracks at my younger age ang managed to pursuie the following subjects. The very first 
+         education level.
          (Maths ,English,Kiswahili, Science, Social Studies & Christian Religion Education)
        </p>
     </div>
@@ -321,11 +336,11 @@
             <i class="fa fa-github"></i> 
             <div class="tooltip">36&nbsp;+&nbsp;Repositories</div>
           </a>
-          <!--3rd-->
+         <!--  
           <a href="#" class="social-icon social-icon--twitter">
             <i class="fa fa-twitter"></i> 
             <div class="tooltip">Tweet&nbsp;&nbsp;me</div>
-          </a>
+          </a> -->
 
           <!--3th-->
           <a href="https://www.linkedin.com/in/daniel-kipchirchir-a93051197" class="social-icon social-icon--linkedin" target="_blank">
