updated new design

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
   <div class="scroll-element">
      <div class="profile-holder">
         <div class="image-container js-scroll slide-left">
-    <h1>Daniel Kipchirchir</h1>
+    <h1 class="text-redish">Daniel Kipchirchir</h1>
          <div>
            <img src="images/profilephoto.png" width="100%" alt="my profile image">
          </div>
   </div>
    <div class="journey-container js-scroll slide-right">
-    <h1>Journey</h1>
+    <h1 class="text-redish">Journey</h1>
     <p>
       “I’ve been passionate about technology since I was able to type. Have always 
       set my mind to new innovations and inventiosn of mankind on technology. 
@@ -86,7 +86,7 @@
   <div class="scroll-element">
      <div class="skills-holder">
         <div class="technology-container js-scroll slide-left">
-    <h1>Technology trands</h1>
+    <h1 class="text-redish">Technology trands</h1>
      <table>
       <tr>
         <td> <br><div class="piechartgit">Git 70%</div><br></td>
@@ -99,7 +99,7 @@
    
   </div>
    <div class="framework-container js-scroll slide-right">
-    <h1>Frameworks</h1>
+    <h1 class="text-redish">Frameworks</h1>
     <table>
       <tr>
         <td><div class="piechartlara">Laravel 75%</div></td>
@@ -117,7 +117,7 @@
   </div>
   </div>
    <div class="language-container js-scroll fade-in-bottom">
-    <h1>Languages</h1>
+    <h1 class="text-redish">Languages</h1>
     <div class="bar expert" data-skill="Java"><span class="text-dark">85%</span></div>
     <div class="bar back expert" data-skill="Javascript"><span class="text-dark">85%</span></div>
     <div class="bar back advanced" data-skill="PHP"><span class="text-dark">73%</span></div>
@@ -134,7 +134,7 @@
 <!-- web projects -->
 <section class="scroll-container" id="projects">
   <div class="scroll-element ">
-    <center><label class="large">Web projects</label></center>
+    <center><label class="large text-redish">Web projects</label></center>
  <div class="projects-holder">
   
       <div class="project js-scroll slide-left">
@@ -167,7 +167,7 @@
 </section>
 <section class="scroll-container">
   <div class="scroll-element">
-<center><label class="large">Desktop application</label></center>
+<center><label class="large text-redish">Desktop application</label></center>
  <div class="projects-holder">
   
       <div class="project js-scroll slide-left">
@@ -207,7 +207,7 @@
 
 <section class="scroll-container" id="education">
   <div class="scroll-element js-scroll slide-right">
- <center><label class="large">Education</label></center>
+ <center><label class="large text-redish">Education</label></center>
   <div class="projects-holder">
   
       <div class="project school-holder js-scroll slide-left">
@@ -241,7 +241,7 @@
     </div>
 
     <!-- certification -->
-<center><label class="large">Certification</label></center>
+<center><label class="large text-redish">Certification</label></center>
   <div class="projects-holder">
   
       <div class="project school-holder js-scroll slide-left">
@@ -278,14 +278,15 @@
          <a href="https://coursera.org/share/543382f307cbc14d7f97e5e7b1663bb4">View certificate</a>
        </p>
     </div>
-    </div>
 
+    </div>
+ <button class="btnmorecert" id="morecert">See more ...</button>
     <!-- end of certification -->
   </div>
 </section>
 <section class="scroll-container" id="more">
   <div class="scroll-element">
- <center><label class="large">Events, Activities, Fun</label></center>
+ <center><label class="large text-redish" >Events, Activities, Fun</label></center>
  <br>
  <div class="events-holder">
   <div class="more-holder">
