updated new design

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <center><label class="large text-redish">Web projects</label></center>
  <div class="projects-holder">
   
-      <div class="project js-scroll slide-left">
+      <div class="project school-holder div-top-margin-blue js-scroll slide-left">
        <h2>e-learning</h2>
        <img src="images/elearning.jpg" width="100%" alt="project image">
        <p>
@@ -145,7 +145,7 @@
          <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
        </p>
     </div>
-     <div class="project js-scroll fade-in-bottom">
+     <div class="project school-holder div-top-margin-yellow js-scroll fade-in-bottom">
        <h2>Excellent tracking</h2>
        <img src="images/excellenttracking.jpg" width="100%" alt="project image">
        <p>
@@ -153,7 +153,7 @@
          <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
        </p>
     </div>
-    <div class="project js-scroll slide-right">
+    <div class="project school-holder div-top-margin-pink js-scroll slide-right">
       <h2>Train ticketing</h2>
        <img src="images/trainticket.jpg" width="100%" alt="project image">
        <p>
@@ -170,7 +170,7 @@
 <center><label class="large text-redish">Desktop application</label></center>
  <div class="projects-holder">
   
-      <div class="project js-scroll slide-left">
+      <div class="project div-top-margin-pink school-holder js-scroll slide-left">
        <h2>Student verdict</h2>
        <img src="images/studentverdict.jpg" width="100%" alt="project image">
        <p>
@@ -178,7 +178,7 @@
          <a href="https://github.com/danielkirwa/Student-evidence-based-verdict" target="_blank">visit</a>
        </p>
     </div>
-     <div class="project js-scroll fade-in-bottom">
+     <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
        <h2>Hotel manager</h2>
        <img src="images/hotel.png" width="100%" alt="project image">
        <p>
@@ -186,7 +186,7 @@
          <a href="https://github.com/danielkirwa/HotelMagementDektopApp" target="_blank">visit</a>
        </p>
     </div>
-    <div class="project js-scroll slide-right">
+    <div class="project div-top-margin-blue school-holder js-scroll slide-right">
       <h2>School management system</h2>
        <img src="images/school.png" width="100%" alt="project image">
        <p>
@@ -210,7 +210,7 @@
  <center><label class="large text-redish">Education</label></center>
   <div class="projects-holder">
   
-      <div class="project school-holder js-scroll slide-left">
+      <div class="project div-top-margin-pink school-holder js-scroll slide-left">
        <h2>Kibabii university</h2>
 
        <p>
@@ -218,7 +218,7 @@
          I am passionate about learning more and shappenng my skills in this tech word. My extensive study in this IT will be of great benefit in my career jounery. I am deeply interested in adding my high-level experience that will help make a difference in my life.
        </p>
     </div>
-     <div class="project school-holder js-scroll fade-in-bottom">
+     <div class="project  div-top-margin-yellow school-holder js-scroll fade-in-bottom">
        <h2>Paul boit boys high</h2>
 
        <p>
@@ -228,7 +228,7 @@
         (Maths, English, Kiswahili, Chemistry, Physics, Biology, Geography and Christian Religion Education)
        </p>
     </div>
-    <div class="project school-holder js-scroll slide-right">
+    <div class="project div-top-margin-blue school-holder js-scroll slide-right">
       <h2>Moi Barracks primary</h2>
    
        <p>
