updated new design

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 <center><label class="large text-redish">Certification</label></center>
   <div class="projects-holder">
   
-      <div class="project school-holder js-scroll slide-left">
+      <div class="project div-top-margin-blue school-holder js-scroll slide-left">
        <h2>Offered by Google</h2>
      
        <p>
@@ -253,7 +253,7 @@
          <a href="https://coursera.org/share/74f5719ced1a022423ad28539d5c1f67">View certificate</a>
        </p>
     </div>
-     <div class="project school-holder js-scroll fade-in-bottom">
+     <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
        <h2>Indian School of Business (ISB)</h2>
      <!--   <img src="images/hotel.png" width="100%"> -->
        <p>
@@ -266,7 +266,7 @@
         <a href="https://coursera.org/share/2b06d4187e4806c92b9e51b1c5287e05">View certificate</a>
        </p>
     </div>
-    <div class="project school-holder js-scroll slide-right">
+    <div class="project school-holder div-top-margin-pink js-scroll slide-right">
       <h2>University of Colorado</h2>
       <!--  <img src="images/school.png" width="100%"> -->
        <p>
