new activity added fun

--- a/index.html
+++ b/index.html
@@ -316,7 +316,19 @@
     </p>
   </div>
   </div>
-   
+    <div class="more-holder">
+        <div class="image-container js-scroll slide-right">
+    <h1>Industrial training talk</h1>
+         <div class="images-shape">
+           <img src="images/industrialtalk.jpg" width="310px" class="image-change" alt="event image">
+         </div>
+  </div>
+   <div class="journey-container js-scroll slide-right">
+    <p>
+      A about the indudtry expectation and on how the tech companies and indudtry at large work.This was a great oppotunity since I was able to meet with the expert from the indutry and learn on various skill need in the tech industry.
+    </p>
+  </div>
+  </div>
  </div>
 
 
