--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       I knew that pursuing technological oriented course was a must to suit my passion, 
       since I could not resist the inner me pushing towards tech, 
       I was able to join tech world and am currently studying at 
-      <strong>KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY”</strong>
+      <strong>"KIBABII UNIVERSITY taking BCs INFORMATION TECHNOLOGY"</strong>
     </p>
   </div>
   </div>
@@ -89,11 +89,18 @@
     <h1 class="text-redish">Technology trands</h1>
      <table>
       <tr>
-        <td> <br><div class="piechartgit">Git 70%</div><br></td>
-        <td><div class="piechartiot">ML 60%</div></td>
+        <td> <br><div class="piechartgit"><strong>Git and Github 70% 
+         Version control , for better code sharing and collaboration 
+        </strong> </div><br></td>
+        <td><div class="piechartiot"><strong>Machine Learning 60%
+           <br>
+            Ability to train and let the models learn for more accurrate performance
+        </strong> </div></td>
       </tr>
        <tr >
-        <td> <div class="piechartvue">IoT 60%</div></td>
+        <td> <div class="piechartvue"><strong>Interet of Things 60% <br>
+          Ready for the word that i can control remotely
+        </strong></div></td>
       </tr>
     </table>
    
@@ -167,7 +174,7 @@
 </section>
 <section class="scroll-container">
   <div class="scroll-element">
-<center><label class="large text-redish">Desktop application</label></center>
+<center><label class="large text-redish">Android application</label></center>
  <div class="projects-holder">
   
       <div class="project div-top-margin-pink school-holder js-scroll slide-left">
@@ -198,12 +205,40 @@
   </div>
 
 </section>
-<!--
-<section class="scroll-container">
-  <div class="scroll-element js-scroll slide-right">
- <center><label class="large">Android</label></center>
+<!-- android projects -->
+<section class="scroll-container" id="projects">
+  <div class="scroll-element ">
+    <center><label class="large text-redish">Android projects</label></center>
+ <div class="projects-holder">
+  
+      <div class="project school-holder div-top-margin-blue js-scroll slide-left">
+       <h2>Converter app</h2>
+       <img src="images/elearning.jpg" width="100%" alt="project image">
+       <p>
+         This a appllication that aid in convertion units scientificaly.
+         <a href="https://online-learning.herokuapp.com" target="_blank">visit</a>
+       </p>
+    </div>
+     <div class="project school-holder div-top-margin-yellow js-scroll fade-in-bottom">
+       <h2>Poultry health manager</h2>
+       <img src="images/excellenttracking.jpg" width="100%" alt="project image">
+       <p>
+         This app provide clear  .
+         <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
+       </p>
+    </div>
+    <div class="project school-holder div-top-margin-pink js-scroll slide-right">
+      <h2>Quiz App </h2>
+       <img src="images/trainticket.jpg" width="100%" alt="project image">
+       <p>
+         This a online based quiz application that lets you do exam online
+         <a href="https://github.com/danielkirwa/my-Train-Ticket-app" target="_blank">visit</a>
+       </p>
+    </div>
+    </div>
   </div>
-</section> -->
+
+</section>
 
 <section class="scroll-container" id="education">
   <div class="scroll-element js-scroll slide-right">
