--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     </div>
 
     </div>
- <button class="btnmorecert" id="morecert">See more ...</button>
+ <button class="btnmorecert" id="morecert">See more certificates ...</button>
     <!-- end of certification -->
   </div>
 </section>
