working on skill graph

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <li><a href="index.html#skills">Skills</a></li>
         <li><a href="index.html#projects">Projects</a></li>
         <li><a href="index.html#education">Education</a></li>
+        <li><a href="index.html#myteam">Team</a></li>
         <li><a href="index.html#more">More</a></li>
       </ul>
     </div>
@@ -125,9 +126,10 @@
   </div>
    <div class="language-container js-scroll fade-in-bottom">
     <h1 class="text-redish">Languages</h1>
-    <div class="bar expert" data-skill="Java"><span class="text-dark">85%</span></div>
-    <div class="bar back expert" data-skill="Javascript"><span class="text-dark">85%</span></div>
-    <div class="bar back advanced" data-skill="PHP"><span class="text-dark">73%</span></div>
+    <div class="bar expert" data-skill="Java Desktop"><span class="text-dark">85%</span></div>
+    <div class="bar expert" data-skill="Java Android"><span class="text-dark">85%</span></div>
+    <div class="bar back loweradvanced" data-skill="PHP"><span class="text-dark">83%</span></div>
+    <div class="bar back advanced" data-skill="Javascript"><span class="text-dark">75%</span></div>
     <div class="bar front advanced" data-skill="CSS3"><span class="text-dark">73%</span></div>
     <div class="bar front advanced" data-skill="HTML5"><span class="text-dark">72%</span></div>
     <div class="bar front basic" data-skill="Arduino"><span class="text-dark">50%</span></div>
@@ -153,10 +155,10 @@
        </p>
     </div>
      <div class="project school-holder div-top-margin-yellow js-scroll fade-in-bottom">
-       <h2>Excellent tracking</h2>
-       <img src="images/excellenttracking.jpg" width="100%" alt="project image">
+       <h2>Dayans tech solution</h2>
+       <img src="images/dayanstech.png" width="100%" alt="project image">
        <p>
-         This website for an tracking company .
+         This website Dayans tech software company.
          <a href="https://excellent-tracking.herokuapp.com/Home.html" target="_blank">visit</a>
        </p>
     </div>
@@ -315,10 +317,100 @@
     </div>
 
     </div>
+    <!-- more certification holder 3 -->
+    <div class="projects-holder" id="morecert1">
+  
+      
+     <div class="project div-top-margin-yellow school-holder js-scroll fade-in-bottom">
+       <h2>University of California, DAVIS</h2>
+     <!--   <img src="images/hotel.png" width="100%"> -->
+       <p>
+        <b>Introduction to Web Development</b><br>
+        Was abel to learn management tools, techniques and methodologies of addresses project management in the context of IT projects, including software projects. Using the framework of project life cycle, the course covers various aspects pertaining to <br>
+        (i) project initiation<br>
+        (ii) project planning and scheduling<br> 
+        (iii) project monitoring and control <br>
+        (iv) project termination<br>
+        <a href="https://coursera.org/share/2b06d4187e4806c92b9e51b1c5287e05">View certificate</a>
+       </p>
+    </div>
+    <div class="project school-holder div-top-margin-pink js-scroll slide-right">
+      <h2>University of Mennesota</h2>
+      <!--  <img src="images/school.png" width="100%"> -->
+       <p>
+         <b>IT Infrastructure and Emerging Trends</b><br>
+        Item covered <br>
+         (i) Windows Server installation <br>
+         (i) Configuring users<br>
+         (iii) Hardening the server operating system <br>
+         <a href="https://coursera.org/share/543382f307cbc14d7f97e5e7b1663bb4">View certificate</a>
+       </p>
+    </div>
+
+    </div>
  <button class="btnmorecert" id="morecert">See more certificates ...</button>
     <!-- end of certification -->
   </div>
 </section>
+
+
+<section class="scroll-container" id="myteam">
+  <div class="scroll-element">
+ <center><label class="large text-redish" >My team</label></center>
+ <br>
+ <div class="events-holder">
+  <div class="more-holder">
+        <div class="image-container js-scroll slide-left">
+    <h1>Jodham wanjala</h1>
+         <div>
+           <img src="images/profile.jpg" width="310px" class="image-change" alt="event image">
+         </div>
+  </div>
+   <div class="journey-container js-scroll slide-left">
+    <p>
+      The purpose of Industrial Training is to get expose  to real work of environment experience and at the same time, to gain the knowledge through hands on observation and job execution. From the industrial training, the I develop skills in work ethics, communication, management and others
+    </p>
+    <label><a href="#">View wanjala</a></label>
+  </div>
+  </div>
+
+  <div class="more-holder">
+        <div class="image-container js-scroll slide-right">
+    <h1>Jackline Adhiambo</h1>
+         <div class="images-shape">
+           <img src="images/iot.jpg" width="310px" class="image-change" alt="event image">
+         </div>
+  </div>
+   <div class="journey-container js-scroll slide-right">
+    <p>
+      The internet of things, or IoT, is a system of interrelated computing devices, mechanical and digital machines, objects, animals or people that are provided with unique identifiers (UIDs) and the ability to transfer data over a network without requiring human-to-human or human-to-computer interaction.
+    </p>
+     <label><a href="#">View wanjala</a></label>
+  </div>
+  </div>
+    <div class="more-holder">
+        <div class="image-container js-scroll slide-right">
+    <h1>Geofrey Ongidi</h1>
+         <div class="images-shape">
+           <img src="images/industrialtalk.jpg" width="310px" class="image-change" alt="event image">
+         </div>
+  </div>
+   <div class="journey-container js-scroll slide-right">
+    <p>
+      A about the indudtry expectation and on how the tech companies and indudtry at large work.This was a great oppotunity since I was able to meet with the expert from the indutry and learn on various skill need in the tech industry.
+    </p>
+     <label><a href="#">View wanjala</a></label>
+  </div>
+  </div>
+ </div>
+
+
+  </div>
+  
+</section>
+
+
+
 <section class="scroll-container" id="more">
   <div class="scroll-element">
  <center><label class="large text-redish" >Events, Activities, Fun</label></center>
@@ -382,7 +474,7 @@
         <!--2nd-->
         <a href="https://github.com/danielkirwa" class="social-icon social-icon--github" target="_blank">
             <i class="fa fa-github"></i> 
-            <div class="tooltip">36&nbsp;+&nbsp;Repositories</div>
+            <div class="tooltip">36&nbsp;+&nbsp;Public Repositories</div>
           </a>
          <!--  
           <a href="#" class="social-icon social-icon--twitter">
@@ -393,12 +485,12 @@
           <!--3th-->
           <a href="https://www.linkedin.com/in/daniel-kipchirchir-a93051197" class="social-icon social-icon--linkedin" target="_blank">
             <i class="fa fa-linkedin"></i> 
-            <div class="tooltip">Follow&nbsp;&nbsp;me</div>
+            <div class="tooltip">Connect&nbsp;&nbsp;with&nbsp;&nbsp;me</div>
           </a>
 
     </div>
   <div class="enddiv">
-     Daniel Kipchrchir &copy; 2020 - &nbsp;<span id="currentyear"></span> &nbsp;&nbsp;<a href="bit.ly/daneilkirwa">danielkirwa.com </a> &trade;
+     Daniel Kipchrchir &copy; 2020 - &nbsp;<span id="currentyear"></span> &nbsp;&nbsp;<a href="https://my-ws-dan.herokuapp.com/">bit.ly/danielkirwa </a> &trade;
   </div>
 
 </div>
